ms-api-gateway/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - name: http
      port: 80
      targetPort: 8888
  type: ClusterIP
